--- a/index.html
+++ b/index.html
@@ -119,6 +119,21 @@
         </div>
     </div>
     <script>
+        // Функция для загрузки и отображения содержимого файла
+        async function loadHeartbeatServices() {
+            try {
+                const response = await fetch('services.txt');
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                const text = await response.text();
+                document.getElementById('heartbeat-services').innerText = text;
+            } catch (error) {
+                document.getElementById('heartbeat-services').innerText = 'Ошибка загрузки данных';
+            }
+        }
+
+        // Функция для проверки состояния серверов
         function checkServer(url, callback) {
             const img = new Image();
             img.onload = function() { callback(true); };
@@ -174,7 +189,10 @@
         }
 
         // Запуск проверки при загрузке страницы
-        window.onload = checkServers;
+        window.onload = function() {
+            loadHeartbeatServices();
+            checkServers();
+        };
     </script>
 </body>
 </html>
