--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="row mb-3">
                 <div class="col-12">
                     <div class="translucent-box large-box">
-                        <h3 class="box-title">Large Box Title</h3>
+                        <h3 class="box-title">Панели управления</h3>
                         <div class="button-group">
                             <button type="button" class="btn btn-primary m-2">Button 1</button>
                             <button type="button" class="btn btn-secondary m-2">Button 2</button>
