--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
                         <h3 class="box-title">Панели управления</h3>
                         <div class="button-group">
                             <button type="button" class="btn btn-primary m-2" id="hostingPanelButton">Хостинг панель</button>
+                            <button type="button" class="btn btn-primary m-2" onclick="window.location.href='https://portal.azure.com/'">Azure</button>
+                            <button type="button" class="btn btn-primary m-2" onclick="window.location.href='https://admin.microsoft.com/'">Microsoft 365</button>
                             <button type="button" class="btn btn-secondary m-2">Button 2</button>
                             <button type="button" class="btn btn-success m-2">Button 3</button>
                         </div>
