--- a/index.html
+++ b/index.html
@@ -87,8 +87,10 @@
                             <button type="button" class="btn btn-primary m-2" id="hostingPanelButton">Хостинг панель</button>
                             <button type="button" class="btn btn-primary m-2" onclick="window.location.href='https://portal.azure.com/'">Azure</button>
                             <button type="button" class="btn btn-primary m-2" onclick="window.location.href='https://admin.microsoft.com/'">Microsoft 365</button>
+                            <button type="button" class="btn btn-success m-2" onclick="window.location.href='https://outlook.office.com/'">Электронная почта</button>
+                            <button type="button" class="btn btn-success m-2" onclick="window.location.href='https://cloud.itmsft.net:90/ucp/'">Телефония</button>
                             <button type="button" class="btn btn-secondary m-2">Button 2</button>
-                            <button type="button" class="btn btn-success m-2">Button 3</button>
+                            <button type="button" class="btn btn-secondary m-2">Button 3</button>
                         </div>
                     </div>
                 </div>
