--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                             <button type="button" class="btn btn-primary m-2" onclick="window.location.href='https://admin.microsoft.com/'">Microsoft 365</button>
                             <button type="button" class="btn btn-success m-2" onclick="window.location.href='https://outlook.office.com/'">Электронная почта</button>
                             <button type="button" class="btn btn-success m-2" onclick="window.location.href='https://cloud.itmsft.net:90/ucp/'">Телефония</button>
-                            <button type="button" class="btn btn-secondary m-2">Button 2</button>
-                            <button type="button" class="btn btn-secondary m-2">Button 3</button>
+                            <button type="button" class="btn btn-secondary m-2" onclick="window.location.href='https://itmsft.com/helpdesk/my/'">Запросы поддержки</button>
+                            <button type="button" class="btn btn-secondary m-2" onclick="window.location.href='https://itmsft.com/my/'">Личный кабинет</button>
                         </div>
                     </div>
                 </div>
@@ -190,10 +190,4 @@
         }
 
         // Запуск проверки при загрузке страницы
-        window.onload = function() {
-            loadHeartbeatServices();
-            checkServers();
-        };
-    </script>
-</body>
-</html>
+        window.onload
