--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 <span class="terminal-text yellow">Резервная линия: <a class="yellow" href="tel:+380487016551">+38 (048) 701-65-51</a></span>
 <span class="terminal-text red">Email: <a class="red" href="mailto:mail@itmsft.net">mail@itmsft.net</a></span>
                         </code></pre>
+                        <div class="button-group-small">
+                            <button type="button" class="btn btn-small btn-outline-light" onclick="window.location.href='https://itmsft.com/helpdesk/my/new/5/'">Создать запрос</button>
+                            <button type="button" class="btn btn-small btn-outline-light" onclick="window.location.href='https://itmsft.com/helpdesk/my/'">Мои запросы</button>
+                        </div>
                         <div class="messenger-icons">
                             <a href="https://t.me/itmsft_bot" class="messenger-icon"><i class="fab fa-telegram-plane"></i></a>
                             <a href="viber://pa?chatURI=itmsft" class="messenger-icon"><i class="fab fa-viber"></i></a>
