--- a/index.html
+++ b/index.html
@@ -113,6 +113,17 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="translucent-box">
+                        <h3 class="box-title">Текущий клиент: John Doe</h3>
+                        <div class="button-group">
+                            <button type="button" class="btn btn-outline-light m-2" onclick="window.location.href='https://domain.com/'">Открыть сайт</button>
+                            <button type="button" class="btn btn-outline-light m-2" id="clientPanelButton">Открыть панель</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script>
@@ -199,6 +210,16 @@
                     window.location.href = 'https://cloud.itmsft.net';
                 } else {
                     window.location.href = 'https://reserve.itmsft.net';
+                }
+            });
+
+            // Обновляем ссылку кнопки панели клиента в зависимости от состояния сервера
+            const clientPanelButton = document.getElementById('clientPanelButton');
+            clientPanelButton.addEventListener('click', function() {
+                if (mainDatacenterOnline) {
+                    window.location.href = 'https://cloud.domain.com';
+                } else {
+                    window.location.href = 'https://reserve.domain.com';
                 }
             });
         }
