--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
                         </h3>
                     </div>
                 </div>
+                <div class="col-md-auto ml-auto d-flex align-items-center">
+                    <div class="translucent-box small-box mr-3">
+                        <h3 class="box-title">John Doe</h3>
+                    </div>
+                    <button type="button" class="btn btn-outline-light m-2" onclick="window.location.href='https://domain.com/'">Открыть сайт</button>
+                    <button type="button" class="btn btn-outline-light m-2" id="clientPanelButton">Открыть панель</button>
+                </div>
                 <div class="col-md-auto ml-auto">
                     <div class="translucent-box small-box">
                         <h3 class="box-title">Language</h3>
@@ -110,17 +117,6 @@
                     <div class="translucent-box">
                         <h3 class="box-title">Уведомления</h3>
                         <pre><code id="platform-notifications">Loading...</code></pre>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="translucent-box">
-                        <h3 class="box-title">Текущий клиент: John Doe</h3>
-                        <div class="button-group">
-                            <button type="button" class="btn btn-outline-light m-2" onclick="window.location.href='https://domain.com/'">Открыть сайт</button>
-                            <button type="button" class="btn btn-outline-light m-2" id="clientPanelButton">Открыть панель</button>
-                        </div>
                     </div>
                 </div>
             </div>
