--- a/index.html
+++ b/index.html
@@ -82,23 +82,25 @@
                 <div class="col-md-auto ml-auto">
                     <div class="translucent-box small-box client-info">
                         <h3 class="box-title">John Doe</h3>
-                        <i class="fas fa-globe icon" title="Открыть сайт" onclick="window.location.href='https://domain.com/'"></i>
-                        <i class="fas fa-server icon" title="Открыть панель" id="clientPanelButton"></i>
-                        <div class="tooltip">
-                            <i class="fas fa-database icon"></i>
-                            <span class="tooltiptext">Датацентр UA, PL, IR</span>
-                        </div>
-                        <div class="tooltip">
-                            <i class="fas fa-cloud icon"></i>
-                            <span class="tooltiptext">CDN подключено</span>
-                        </div>
-                        <div class="tooltip">
-                            <i class="fas fa-shield-alt icon"></i>
-                            <span class="tooltiptext">Firewall и WAF подключен</span>
-                        </div>
-                        <div class="tooltip">
-                            <i class="fas fa-hdd icon"></i>
-                            <span class="tooltiptext">Backup Геоизбыточный подключён</span>
+                        <div class="icons-container">
+                            <i class="fas fa-globe icon" title="Открыть сайт" onclick="window.location.href='https://domain.com/'"></i>
+                            <i class="fas fa-server icon" title="Открыть панель" id="clientPanelButton"></i>
+                            <div class="tooltip">
+                                <i class="fas fa-database icon"></i>
+                                <span class="tooltiptext">Датацентр UA, PL, IR</span>
+                            </div>
+                            <div class="tooltip">
+                                <i class="fas fa-cloud icon"></i>
+                                <span class="tooltiptext">CDN подключено</span>
+                            </div>
+                            <div class="tooltip">
+                                <i class="fas fa-shield-alt icon"></i>
+                                <span class="tooltiptext">Firewall и WAF подключен</span>
+                            </div>
+                            <div class="tooltip">
+                                <i class="fas fa-hdd icon"></i>
+                                <span class="tooltiptext">Backup Геоизбыточный подключён</span>
+                            </div>
                         </div>
                     </div>
                 </div>
