--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 <span class="tooltiptext">Firewall и WAF подключен</span>
                             </div>
                             <div class="tooltip">
-                                <i class="fas fa-hdd icon"></i>
+                                <i class="fa-solid fa-hard-drive"></i>
                                 <span class="tooltiptext">Backup Геоизбыточный подключён</span>
                             </div>
                         </div>
