--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         .client-info {
             display: flex;
             align-items: center;
-            justify-content: space-between;
         }
         .client-info .box-title {
             margin-right: 20px;
@@ -98,7 +97,7 @@
                                 <span class="tooltiptext">Firewall и WAF подключен</span>
                             </div>
                             <div class="tooltip">
-                                <i class="fa-solid fa-hard-drive"></i>
+                                <i class="fas fa-hdd icon"></i>
                                 <span class="tooltiptext">Backup Геоизбыточный подключён</span>
                             </div>
                         </div>
