--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         }
         .client-info .icon {
             font-size: 24px;
-            color: white;
+            color: #00ff00;
             margin-right: 15px;
             cursor: pointer;
         }
         .client-info .icon:hover {
-            color: #00ff00;
+            color: red;
         }
         .tooltip {
             position: relative;
