--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <i class="fas fa-globe icon" title="Открыть сайт" onclick="window.location.href='https://domain.com/'"></i>
                             <i class="fas fa-server icon" title="Открыть панель" id="clientPanelButton"></i>
                             <div class="tooltip">
-                                <i class="fas fa-database icon"></i>
+                                <i class="fas fa-server icon"></i>
                                 <span class="tooltiptext">Датацентр UA, PL, IR</span>
                             </div>
                             <div class="tooltip">
