--- a/index.html
+++ b/index.html
@@ -84,22 +84,10 @@
                         <div class="icons-container">
                             <i class="fas fa-globe icon" title="Открыть сайт" onclick="window.location.href='https://domain.com/'"></i>
                             <i class="fas fa-server icon" title="Открыть панель" id="clientPanelButton"></i>
-                            <div class="tooltip">
-                                <i class="fas fa-server icon"></i>
-                                <span class="tooltiptext">Датацентр UA, PL, IR</span>
-                            </div>
-                            <div class="tooltip">
-                                <i class="fas fa-cloud icon"></i>
-                                <span class="tooltiptext">CDN подключено</span>
-                            </div>
-                            <div class="tooltip">
-                                <i class="fas fa-shield-alt icon"></i>
-                                <span class="tooltiptext">Firewall и WAF подключен</span>
-                            </div>
-                            <div class="tooltip">
-                                <i class="fas fa-hdd icon"></i>
-                                <span class="tooltiptext">Backup Геоизбыточный подключён</span>
-                            </div>
+                            <i class="fas fa-database icon" title="Датацентр UA, PL, IR" onclick="window.location.href='#'"></i>
+                            <i class="fas fa-cloud icon" title="CDN подключено" onclick="window.location.href='#'"></i>
+                            <i class="fas fa-shield-alt icon" title="Firewall и WAF подключен" onclick="window.location.href='#'"></i>
+                            <i class="fas fa-hdd icon" title="Backup Геоизбыточный подключён" onclick="window.location.href='#'"></i>
                         </div>
                     </div>
                 </div>
