--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
         }
         .client-info .icon {
             font-size: 24px;
-            color: #00ff00;
             margin-right: 15px;
             cursor: pointer;
+        }
+        .client-info .white-icon {
+            color: #ffffff;
+        }
+        .client-info .green-icon {
+            color: #00ff00;
         }
         .client-info .icon:hover {
             color: red;
@@ -82,12 +87,12 @@
                     <div class="translucent-box small-box client-info">
                         <h3 class="box-title">John Doe</h3>
                         <div class="icons-container">
-                            <i class="fas fa-globe icon" title="Открыть сайт" onclick="window.location.href='https://domain.com/'"></i>
-                            <i class="fas fa-server icon" title="Открыть панель" id="clientPanelButton"></i>
-                            <i class="fas fa-database icon" title="Датацентр UA, PL, IR" onclick="window.location.href='#'"></i>
-                            <i class="fas fa-cloud icon" title="CDN подключено" onclick="window.location.href='#'"></i>
-                            <i class="fas fa-shield-alt icon" title="Firewall и WAF подключен" onclick="window.location.href='#'"></i>
-                            <i class="fas fa-hdd icon" title="Backup Геоизбыточный подключён" onclick="window.location.href='#'"></i>
+                            <i class="fas fa-globe icon white-icon" title="Открыть сайт" onclick="window.location.href='https://domain.com/'"></i>
+                            <i class="fas fa-server icon white-icon" title="Открыть панель" id="clientPanelButton"></i>
+                            <i class="fas fa-database icon green-icon" title="Датацентр UA, PL, IR" onclick="window.location.href='#'"></i>
+                            <i class="fas fa-cloud icon green-icon" title="CDN подключено" onclick="window.location.href='#'"></i>
+                            <i class="fas fa-shield-alt icon green-icon" title="Firewall и WAF подключен" onclick="window.location.href='#'"></i>
+                            <i class="fas fa-hdd icon green-icon" title="Backup Геоизбыточный подключён" onclick="window.location.href='#'"></i>
                         </div>
                     </div>
                 </div>
