--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>GitHub Styled Page</title>
     <link href="https://support.itmsft.net/stylebootstrap.css" rel="stylesheet">
     <link href="https://support.itmsft.net/styles.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://support.itmsft.net/fa-all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
         .client-info {
             display: flex;
