--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub Styled Page</title>
+    <title>ITMSFT Group Cloud HUB</title>
     <link href="https://support.itmsft.net/stylebootstrap.css" rel="stylesheet">
     <link href="https://support.itmsft.net/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
