--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                 <div class="col-md-auto">
                     <div class="translucent-box small-box">
                         <h3 class="box-title">
-                            <span class="logo-part1">ITMSFT Group</span> | 
-                            <span class="logo-part2">Support</span>
+                            <span class="logo-part1">ITMSFT Group</span> 
+                            <span class="logo-part2">Cloud</span>
                         </h3>
                     </div>
                 </div>
