--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                     margin-right: 10px;
                                     font-size: 16px;
                                     text-decoration: none;
-                                    color: blue;
+                                    color: #800080;
                                     font-weight: bold;
                                 }
                             
