--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="translucent-box">
-                        <h3 class="box-title">Облачная инфраструктура</h3>
+                        <h3 class="box-title">Облачная служба</h3>
                         <table>
                             <tr>
                                 <th class="yellow-text">Описание</th>
