--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 
                 
-                <div class="col-md-auto ml-auto">
+                <!-- <div class="col-md-auto ml-auto">
                     <div class="translucent-box small-box client-info">
                         <h3 class="box-title">John Doe</h3>
                         <div class="icons-container">
@@ -118,9 +118,7 @@
                             <i class="fas fa-hdd icon green-icon" title="Backup Геоизбыточный подключён" onclick="window.location.href='#'"></i>
                         </div>
                     </div>
-                </div>
-
-
+                </div> -->
                 
                 <div class="col-md-auto ml-auto">
                     <div class="translucent-box small-box">
