--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ITMSFT Group Cloud HUB</title>
-    <link href="https://support.itmsft.net/stylebootstrap.css" rel="stylesheet">
-    <link href="https://support.itmsft.net/styles.css" rel="stylesheet">
+    <link href="https://hub.itmsft.net/stylebootstrap.css" rel="stylesheet">
+    <link href="https://hub.itmsft.net/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -290,7 +290,7 @@
         // Функция для загрузки и отображения содержимого файла
         async function loadHeartbeatServices() {
             try {
-                const response = await fetch('https://support.itmsft.net/services.txt');
+                const response = await fetch('https://hub.itmsft.net/services.txt');
                 if (!response.ok) {
                     throw new Error('Network response was not ok');
                 }
@@ -304,7 +304,7 @@
         // Функция для загрузки и отображения новостей
         async function loadPlatformNews() {
             try {
-                const response = await fetch('https://support.itmsft.net/news.txt');
+                const response = await fetch('https://hub.itmsft.net/news.txt');
                 if (!response.ok) {
                     throw new Error('Network response was not ok');
                 }
@@ -318,7 +318,7 @@
         // Функция для загрузки и отображения уведомлений
         async function loadPlatformNotifications() {
             try {
-                const response = await fetch('https://support.itmsft.net/notifications.txt');
+                const response = await fetch('https://hub.itmsft.net/notifications.txt');
                 if (!response.ok) {
                     throw new Error('Network response was not ok');
                 }
