--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                         <pre><code>
 <span class="terminal-text yellow">Телефон: <a class="yellow" href="tel:+380487063848">+38 (048) 706-38-48</a></span>
 <span class="terminal-text yellow">Резервная линия: <a class="yellow" href="tel:+380487016551">+38 (048) 701-65-51</a></span>
-<span class="terminal-text red">Email: <a class="red" href="mailto:mail@itmsft.net">mail@itmsft.net</a></span>
+<span class="terminal-text red">Email: <a class="red" href="mailto:support@itmsft.net">support@itmsft.net</a></span>
                         </code></pre>
                         <div class="button-group-small">
                             <button type="button" class="btn btn-small btn-outline-light" onclick="window.location.href='https://itmsft.com/helpdesk/my/new/5/'">Создать запрос</button>
